# tiny-vulcano-engine

./: .gitignore  CMakeLists.txt  README.md  TinyVulcano.sln  TinyVulcano.vcxproj  TinyVulcano.vcxproj.filters
Debug/: vc143.idb
Debug/TinyVulcano.tlog/: CL.command.1.tlog  CL.write.1.tlog  TinyVulcano.lastbuildstate
header/: first_app.hpp  vk_window.hpp
include/: TinyBuffer.hpp  TinyCommand.hpp  TinyDepth.hpp  TinyDevice.hpp  TinyEngine.hpp  TinyInput.hpp  TinyInstance.hpp  TinyMathLibrary.hpp  TinyPipeline.hpp  TinySwapchain.hpp  TinySync.hpp  TinyTexture.hpp  TinyWindow.hpp  first_app.hpp  input.hpp  vk_device.hpp  vk_pipeline.hpp  vk_window.hpp
resources/shaders/: compile.bat  compile_particle.bat  compile_simple.bat  frag.spv  particle.frag  particle.vert  particle_frag.spv  particle_vert.spv  shader.frag  shader.vert  simple_shader.frag  simple_shader.vert  simple_shader.vert.spv  vert.spv
src/: TinyBuffer.cpp  TinyCommand.cpp  TinyDepth.cpp  TinyDevice.cpp  TinyEngine.cpp  TinyInstance.cpp  TinyPipeline.cpp  TinySwapchain.cpp  TinySync.cpp  TinyTexture.cpp  TinyWindow.cpp  first_app.cpp  lve_device.cpp  lve_pipeline.cpp  main.cpp  vk_device.cpp  vk_pipeline.cpp  vk_window.cpp
x64/Debug/: vc143.idb
x64/Debug/TinyVulcano.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TinyVulcano.lastbuildstate
